--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Communication Theory/.DS_Store
 .DS_Store
 Wireless System/.DS_Store
 Wireless System/.DS_Store
+Computer Network/.DS_Store
+Communication Theory/.DS_Store
