--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ Wireless System/.DS_Store
 Wireless System/.DS_Store
 Computer Network/.DS_Store
 Communication Theory/.DS_Store
+.DS_Store
+Computer Network/.DS_Store
