--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ Computer Network/.DS_Store
 Database/.DS_Store
 Database/.DS_Store
 .DS_Store
+.DS_Store
+Communication Theory/.DS_Store
+Computer Network/.DS_Store
+Database/.DS_Store
+DSP/.DS_Store
+DSP/Assignments/.DS_Store
+Wireless System/.DS_Store
