--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ Database/.DS_Store
 DSP/.DS_Store
 DSP/Assignments/.DS_Store
 Wireless System/.DS_Store
+Database/Videos/2-3.mp4
+Computer Network/Videos/Comp2001jIntro.mp4
+Database/Videos/2-2.mp4
+Wireless System/Videos/EEEN3006j Week 1.mp4
