--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ Database/Videos/2-3.mp4
 Computer Network/Videos/Comp2001jIntro.mp4
 Database/Videos/2-2.mp4
 Wireless System/Videos/EEEN3006j Week 1.mp4
+.DS_Store
+Computer Network/.DS_Store
+Computer Network/.DS_Store
