ignore over big video

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ Wireless System/Videos/EEEN3006j Week 1.mp4
 .DS_Store
 Computer Network/.DS_Store
 Computer Network/.DS_Store
+Computer Network/Videos/2001-lecture2.mp4
+Computer Network/Videos/Comp2001-qa1.mp4
